2008-02-01  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditor.cs: Fixed
	  VisualToLogicalLine method.

2008-02-01  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Worked on folding.

2008-02-01  Mike Krüger <mkrueger@novell.com> 

	* TangoStyle.xml, Mono.TextEditor/Document.cs: Worked on folding.

2008-01-31  Mike Krüger <mkrueger@novell.com> 

	* VBNetSyntaxMode.xml, CSharpSyntaxMode.xml, JavaSyntaxMode.xml,
	  CPPSyntaxMode.xml, CSyntaxMode.xml,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Style.cs, XmlSyntaxMode.xml: Implemented
	  lazy loading of syntax modes and styles.

2008-01-31  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, TangoStyle.xml, VBNetSyntaxMode.xml,
	  JavaSyntaxMode.xml, CSyntaxMode.xml, CPPSyntaxMode.xml,
	  OblivionStyle.xml, Mono.TextEditor/Document.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs, XmlSyntaxMode.xml,
	  C64Style.xml: Added some syntax highlighting files.

2008-01-31  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs, XmlSyntaxMode.xml: Added
	  iterator for selected lines.

2008-01-30  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Fixed italic bug in rtf output.

2008-01-30  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Added update after undo/redo.

2008-01-30  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, OblivionStyle.xml, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/Match.cs,
	  Mono.TextEditor.Highlighting/Rule.cs,
	  Mono.TextEditor.Highlighting/Keywords.cs, TangoStyle.xml,
	  CSharpSyntaxMode.xml: Worked on styling.
